# firefox-accounts

./: .gitignore  README.md
extension/: package_extension.sh
extension/windows_accounts/: background.js  manifest.json  message_receiver.js
linux_browsercore/: setup.cfg  test.py
linux_browsercore/src/: .gitignore
linux_browsercore/src/browser_core/: __init__.py  __main__.py  browser_core.py
