[metadata]
name = linux-browsercore
version = attr: browser_core.__version__
author = Patrick Vares
author_email = p.vares@elsevier.com
description = A linux implementation of the "BrowserCore.exe" program in windows
long_description = file: README.md
long_description_content_type = text/markdown
url = 

[options]
packages_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires = 
    dbus-python>=1.3.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    browsercore = browser_core:main
    browsercore-debug = browser_core:debug_main
